Fix setting panel, about panel, dark mode, and UI improvements

--- a/css/card.css
+++ b/css/card.css
@@ -6,14 +6,14 @@
 
     background:var(--card);
 
-    border-radius:22px;
+    border-radius:18px;
 
     box-shadow:
     0 12px 30px rgba(0,0,0,.08);
 
-    padding:20px;
+    padding:16px;
 
-    margin:16px;
+    margin:0px;
 
     transition:.25s;
 
